--- a/src/RedBlackTree_GUI.form
+++ b/src/RedBlackTree_GUI.form
@@ -35,7 +35,9 @@
       </component>
       <component id="1134f" class="javax.swing.JButton" binding="deleteButton">
         <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="91" height="30"/>
+          </grid>
         </constraints>
         <properties>
           <text value="Delete"/>
